<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".SecondActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/article_title"
        android:navigationIcon="@drawable/arrow_back">

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"/>
    </Toolbar>
    
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="8dp">

            <TextView
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_header2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end">

                <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/unpressed_like"
                    android:backgroundTint="@color/white"/>
                <TextView
                    android:id="@+id/likes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likes_count"
                    android:layout_gravity="center_vertical"/>

                <ImageButton
                    android:id="@+id/dislike_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/unpressed_dislike"
                    android:backgroundTint="@color/white"/>
                <TextView
                    android:id="@+id/dislikes_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dislikes_count"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/article2_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_paragraph2_1"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_paragraph2_2"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_paragraph2_3"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/article_paragraph2_4" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/was_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_read" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
